# sys-manager

./: Cargo.toml  Makefile.toml
ambassador/: Cargo.toml  Makefile.toml
ambassador/configs/: default.toml
ambassador/scripts/: ambassador.service  install.sh  tt.sh  uninstall.sh  uninstall2.sh
ambassador/src/: hardware.rs  main.rs  myself.rs  sys_info.rs
protocol/: Cargo.toml
protocol/src/: deploy.rs  lib.rs  monitor.rs
src/: lib.rs  macros.rs  main.rs  software.rs
src/application/: mod.rs
src/controller/http/: mod.rs  node.rs
src/domain/: node.rs
src/hardware/: monitor.rs
src/infrastructure/: node_repo.rs
