[package]
name = "system-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["protocol", "ambassador"]

[workspace.dependencies]
actix-web = "4.3.1"
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0.72"
bytes = "1.4.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tokio-util = { version = "0.7.8", features = ["codec"] }
futures = "0.3.28"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
config = { version = "0.13.3", default-features = false, features = ["toml"] }

[dependencies]
actix-web.workspace = true
tokio.workspace = true
anyhow.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-util.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true


[dependencies.protocol]
path = "./protocol"
