[package]
name = "system-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["protocol", "ambassador"]

[workspace.dependencies]
actix-web = "4.3.1"
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0.72"
bytes = "1.4.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tokio-util = { version = "0.7.8", features = ["codec"] }
futures = "0.3.28"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
config = { version = "0.13.3", default-features = false, features = ["toml"] }
derive_more = { version = "0.99.17", default-features = false, features = [
    "display",
] }

[dependencies]
actix-web.workspace = true
tokio.workspace = true
anyhow.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-util.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
rexpect = "0.5.0"
derive_more.workspace = true
paste = "1.0.14"
tempfile = "3.8.0"

[dependencies.protocol]
path = "./protocol"

[dev-dependencies]
tracing-test = "0.2.4"
