[package]
name = "ambassador"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web.workspace = true
anyhow.workspace = true
futures.workspace = true
protocol = { version = "0.1.0", path = "../protocol" }
serde.workspace = true
serde_json.workspace = true
sysinfo = { version = "0.29.8", features = ["serde"] }
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tracing-test = "0.2.4"
